IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/23/15: IMOD_4-8-37
6/23/15: Fixed header output for -origin for negative values.

6/15/15: Fixed bogus warnings in header output.

6/15/15: Fixed division by 0 problem in reprojections by Tilt.

6/13/15: Fixed saving of transparency for 3dmod movie sequences.

6/13/15: Changed fortran program model reading to open read-only.

6/8/15: IMOD_4-8-36
6/8/15: Added preNID to program list so it will be built and distibuted.

6/3/15: Changed patch tracking size from 700x700 to 680x680 in system
template cryoSample.adoc to give 4x4 patches in 2Kx2K data, also added
directive to analyze 1 surface in tiltalign.

6/2/15: In eTomo - Fine Alignment, added an interface for restrictalign.
(Bug# 1875)

6/2/15: In eTomo - Fiducial Model, made generating the seed model
automatically the default.(Bug# 1822)

6/1/15: In uitest, added a system template to the reconstruction tests.
(Bug# 1888)

6/1/15: In eTomo - Setup Reconstruction, fixed a problem reading templates
where the dialog was not completely updated to reflect the single/dual axis
setting.(Bug# 1884)

5/29/15: In eTomo, creating ta* align logs when it is necessary to read them.
(Bug# 1873)

5/29/15: In eTomo - Batchruntomo Interface, fixed a bug in autodoc writing -
where a new line was not issued for a directive without a value.(Bug# 1872)

5/20/15: IMOD_4-8-35

5/20/15: Fixed problem with eTomo trying to make a patch track com file while
the .preali is still being built.

5/20/15: Fixed Findbeads3d threshold setting in model when no points stored
below threshold.

5/20/15: Added ability to signal Batchruntomo to finish current set and quit.

5/20/15: Added option to Subtomosetup to make it skip subvolume numbers when
it skips points.

5/18/15: In eTomo added a basic plugin framework and plugin niche in Tomogram
Generation.(Bug# 1870)

5/13/15: IMOD_4-8-33